--- a/S10.01-Exercise-SynchronizingTheWeather/app/src/main/AndroidManifest.xml
+++ b/S10.01-Exercise-SynchronizingTheWeather/app/src/main/AndroidManifest.xml
@@ -56,9 +56,11 @@
         <provider
             android:name=".data.WeatherProvider"
             android:authorities="@string/content_authority"
-            android:exported="false"/>
+            android:exported="false" />
         
-        <!-- TODO (8) Register SunshineSyncIntentService in the manifest -->
+        <service
+            android:name=".sync.SunshineSyncIntentService"
+            android:exported="false" />
 
     </application>
 </manifest>
