--- a/S10.02-Exercise-SmarterSyncing/app/build.gradle
+++ b/S10.02-Exercise-SmarterSyncing/app/build.gradle
@@ -6,6 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.sunshine"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
